@@ -17,7 +17,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA
  *
- * $Id: xine.h.in,v 1.108 2003/12/09 00:02:28 f1rmb Exp $
+ * $Id: xine.h.in,v 1.109 2003/12/09 23:55:11 hadess Exp $
  *
  * public xine-lib (libxine) interface and documentation
  *
@@ -794,6 +794,7 @@ int xine_get_audio_lang (xine_stream_t *stream, int channel,
 int xine_get_spu_lang   (xine_stream_t *stream, int channel,
 			 char *lang);
 #define XINE_LANG_MAX                     32
+#define XINE_LANG_LABEL_MAX_SIZE          128
 
 /*
  * get position / length information
