@@ -33,7 +33,8 @@ xine-lib (1-rc3)
   * detect end of real rtsp streams
   * fix tvtime segfaults
   * fix performance problems of RTP/UDP plugin
-  
+  * fix crash with really long subtitle/language names in ogm/off files
+ 
 xine-lib (1-rc2)
   * XvMC support for hardware accelerated mpeg2 playback (-V xvmc)
   * Fix some errors in sound state when exiting xine and using alsa.
